[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-media-analyzer"
version = "0.1.0"
description = "Objective Gemini audio/video transcription and observation CLI"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.0.0",
    "pydantic>=2.0",
]

[project.scripts]
gemini-media = "gemini_media_analyzer:main"

[tool.setuptools]
py-modules = ["gemini_media_analyzer"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
